--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+    background: url(assets/pexels-photo-542553.jpeg) bottom center;
     background-size: cover;
 }
 
@@ -25,7 +25,7 @@ html {
     margin: 1rem;
     font-size: 1.5rem;
     padding: 1rem .5rem;
-    transition: all .07s ease;
+    transition: all .07s;
     width: 10rem;
     text-align: center;
     color: white;
